# CHRONO-ARCH

./: .env.example  .gitignore  AUTHORS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  COMPLETION.md  COMPLETION_CERTIFICATE.txt  CONTRIBUTING.md  DEPLOY.md  Dockerfile  INSTALL.md  MANIFEST.in  Makefile  NOTICE  PROJECT_INVENTORY.md  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt  upload_chrono_arch.py
benchmarks/: __init__.py
benchmarks/collapse_detection/: benchmark.py
benchmarks/diffusion_accuracy/: benchmark.py
benchmarks/probabilistic_calibration/: benchmark.py
chrono_arch/: __init__.py
chrono_arch/causal/: __init__.py  causal_graph.py  counterfactual.py  do_calculus.py
chrono_arch/collapse/: __init__.py  early_warning.py  phase_transition.py  stability.py
chrono_arch/diffusion/: __init__.py  absorptive_capacity.py  knowledge_diffusion.py
chrono_arch/environment/: __init__.py  coupling.py  env_model.py  vulnerability.py
chrono_arch/graph/: __init__.py  co_evolution.py  graph_measures.py  temporal_graph.py  tgnn.py
chrono_arch/probabilistic/: __init__.py  bayesian_assimilation.py  fokker_planck.py  particle_filter.py  sde.py
chrono_arch/simulation/: __init__.py  engine.py
chrono_arch/state/: __init__.py  evolution.py  initializer.py  state_vector.py
config/: collapse_thresholds.yaml  default.yaml
data/examples/: bronze_age_collapse.csv
layers/layer1_ingestion/: data_loader.py
layers/layer2_embedding/: embedder.py
reports/: PROJECT_COMPLETION.txt  README.md  TAXONOMY_FINAL.txt
tests/: __init__.py
(+8 files in other folders)
