[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chrono-arch"
version = "1.0.0"
description = "CHRONO-ARCH: A Computational Framework for Temporal Archaeology and Civilizational Dynamics Using AI and Complex Systems Modeling"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Samir Baladi", email = "gitdeeper@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "networkx>=2.6",
    "matplotlib>=3.4",
]

[project.urls]
Homepage = "https://chronoarch.netlify.app"
Repository = "https://github.com/gitdeeper12/CHRONO-ARCH"
Documentation = "https://chronoarch.netlify.app/documentation"
DOI = "https://doi.org/10.5281/zenodo.20330475"

[tool.setuptools]
packages = ["chrono_arch"]

[tool.setuptools.package-data]
chrono_arch = ["py.typed"]
